--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
+                    <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
 
                 </div>
 
